// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-gg1re0"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render defaultValue 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value="Olaf"
    />
  </div>
</div>
`;

exports[`props should render disabled 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
  disabled=""
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      disabled=""
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render gap 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render isRounded 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render isSeamless 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-d1nal9"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render multiline 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-829knl"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <textarea
      class="css-4ivugn"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
    />
  </div>
</div>
`;

exports[`props should render prefix 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item css-mtk3dw"
    data-g2-c16t="true"
    data-g2-component="TextInputPrefix"
  >
    <span>
      prefix
    </span>
  </div>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-1qt1tiq"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
</div>
`;

exports[`props should render suffix 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-1ucos74"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value=""
    />
  </div>
  <div
    class="wp-components-flex-item css-1suoifq"
    data-g2-c16t="true"
    data-g2-component="TextInputSuffix"
  >
    <span>
      suffix
    </span>
  </div>
</div>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1ynpt9z"
  data-g2-c16t="true"
  data-g2-component="TextInput"
>
  <div
    class="wp-components-flex-item wp-components-flex-block css-4z9ate"
    data-g2-c16t="true"
    data-g2-component="TextInputContent"
  >
    <input
      class="css-pgzgex"
      data-g2-c16t="true"
      data-g2-component="TextInputInput"
      id="text-input"
      value="Olaf"
    />
  </div>
</div>
`;
